@@ -10,6 +10,7 @@ Akeeba Panopticon 1.0.5
 + Per-user language preference [gh-326]
 + Groups act as tags for site filtering [gh-333]
 # [LOW] Test email message showed %s instead of the Panopticon URL
+# [LOW] Can't create a group without permissions [gh-335]
 
 Akeeba Panopticon 1.0.4
 ================================================================================
